--- a/AdvancedEdit/AdvancedEdit.csproj
+++ b/AdvancedEdit/AdvancedEdit.csproj
@@ -28,6 +28,7 @@
         <PackageReference Include="ImGui.NET" Version="1.91.0.1" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105"/>
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105"/>
+        <PackageReference Include="NativeFileDialogs.Net" Version="1.2.1" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
