--- a/AdvancedEdit/AdvancedEdit.csproj
+++ b/AdvancedEdit/AdvancedEdit.csproj
@@ -17,6 +17,9 @@
     <ItemGroup>
         <None Remove="Icon.ico"/>
         <None Remove="Icon.bmp"/>
+        <None Update="imgui.ini">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Icon.ico">
