--- a/AdvancedEdit/AdvancedEdit.csproj
+++ b/AdvancedEdit/AdvancedEdit.csproj
@@ -9,6 +9,7 @@
         <Nullable>enable</Nullable>
         <Configurations>Debug;Release</Configurations>
         <Platforms>AnyCPU</Platforms>
+        <NoWarn>CS9107</NoWarn>
     </PropertyGroup>
     <PropertyGroup>
         <ApplicationManifest>app.manifest</ApplicationManifest>
