--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,7 +3,7 @@ name: Deploy docs to pages
 on:
     push:
         branches:
-            - main
+            - master
 
 jobs:
     build-and-deploy:
