--- a/AdvancedEdit/AdvancedEdit.csproj
+++ b/AdvancedEdit/AdvancedEdit.csproj
@@ -21,6 +21,12 @@
         <None Update="imgui.ini">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Asm\HeaderLaps.ips">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Asm\README.md">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Icon.ico">
