--- a/AdvancedEdit/AdvancedEdit.csproj
+++ b/AdvancedEdit/AdvancedEdit.csproj
@@ -43,6 +43,9 @@
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105"/>
         <PackageReference Include="NativeFileDialogs.Net" Version="1.2.1" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Assets\" />
+    </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
         <Exec Command="dotnet tool restore"/>
