--- a/AdvancedEdit/AdvancedEdit.csproj
+++ b/AdvancedEdit/AdvancedEdit.csproj
@@ -27,6 +27,9 @@
         <None Update="Asm\README.md">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Content\OpenSans-Regular.ttf">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Icon.ico">
@@ -37,14 +40,12 @@
         </EmbeddedResource>
     </ItemGroup>
     <ItemGroup>
+        <PackageReference Include="Hexa.NET.ImGui" Version="2.2.7" />
+        <PackageReference Include="Hexa.NET.ImGui.Widgets" Version="1.2.13" />
         <PackageReference Include="Hjg.Pngcs" Version="1.1.4" />
-        <PackageReference Include="ImGui.NET" Version="1.91.0.1" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105"/>
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105"/>
         <PackageReference Include="NativeFileDialogs.Net" Version="1.2.1" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Assets\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
