--- a/AdvancedEdit/AdvancedEdit.csproj
+++ b/AdvancedEdit/AdvancedEdit.csproj
@@ -46,6 +46,7 @@
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105"/>
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105"/>
         <PackageReference Include="NativeFileDialogs.Net" Version="1.2.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
