--- a/AdvancedEdit/AdvancedEdit.csproj
+++ b/AdvancedEdit/AdvancedEdit.csproj
@@ -45,8 +45,12 @@
         <PackageReference Include="Hjg.Pngcs" Version="1.1.4" />
         <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105"/>
         <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105"/>
-        <PackageReference Include="NativeFileDialogs.Net" Version="1.2.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Octokit" Version="14.0.0" />
+        <PackageReference Include="TinyDialogsNet" Version="2.0.0" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="UI\Updater\" />
     </ItemGroup>
     <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
         <Message Text="Restoring dotnet tools" Importance="High"/>
